--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -9,19 +9,18 @@ API Course, Lesson 1 -->
    </style>
  </head>
  <body>
-   <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <div id="map">
+  </div>
    <script>
-     // TODO: Create a map variable
-
-     // TODO: Complete the following function to initialize the map
      function initMap() {
-       // TODO: use a constructor to create a new map JS object. You can use the coordinates
-       // we used, 40.7413549, -73.99802439999996 or your own!
+      map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: -122.3321, lng: 47.6062},
+      zoom: 10
+      })
      }
    </script>
-   <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
+   <script async defer
+    src="https://maps.googleapis.com/map/api/js?key=MYAPIKEY&v=3&callback=initMap">
    </script>
  </body>
 </html>
